# restate-google-adk-example

./: .gitignore  README.md  __main__.py  adk_extensions.py  agent.py  pyproject.toml
examples/claims-processing/: README.md  agent.py  pyproject.toml
examples/hello-world/: __main__.py  agent.py  pyproject.toml
middleware/: restate_plugin.py  restate_session_service.py
